# Hybrid-Uncertainty-Aware-Model

./: .env.example  .gitignore  Capstone Final Report.docx  Crop Recommendation.docx  DEPLOYMENT_GUIDE.md  Hybrid_Uncertainty_Aware_Model_for_Precision_Crop_Recommendation_System_Using_Machine_Learning.docx  Procfile  QUICK_START_DEPLOYMENT.md  README.md  deployment_monitor.py  pyproject.toml  render.yaml  requirements.txt
app/: flask_app.py
app/chatbot/: __init__.py  service.py
app/static/css/: site.css
app/static/js/: predict.js  schemes.js
app/static/js/chatbot/: widget.js
app/templates/: about.html  base.html  crops.html  home.html  index.html  insights.html  login.html  predict.html  schemes.html  signup.html  verify_otp.html
data/: Crop_recommendation.csv  ui_translations.json
models/: crop_model.pkl
notebooks/: augment_data.py  config.py  data_loader.py  eda.py  explainability.py  feature_engineering.py  feature_importance.py  hybrid_model.py  model_training.py  preprocessing.py  save_model.py  train.py  tuning.py
